--- a/GoogleBookClient/Cell/SearchTableViewCell.xib
+++ b/GoogleBookClient/Cell/SearchTableViewCell.xib
@@ -19,6 +19,7 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lVs-3Z-6lz">
                         <rect key="frame" x="5" y="5" width="95" height="159"/>
                         <constraints>
+                            <constraint firstAttribute="height" constant="159" id="DqY-8p-jRc"/>
                             <constraint firstAttribute="width" constant="95" id="MeO-nZ-ZL8"/>
                         </constraints>
                     </imageView>
