--- a/GoogleBookClient/Base.lproj/Main.storyboard
+++ b/GoogleBookClient/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cRm-WP-EI7">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="J8m-Bo-4QF">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -73,7 +73,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="924.4274809160305" y="-27.464788732394368"/>
+            <point key="canvasLocation" x="1851.1450381679388" y="-27.464788732394368"/>
         </scene>
         <!--ReviewVC-->
         <scene sceneID="q4L-pM-Njf">
@@ -88,25 +88,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V5j-xy-Xsb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1877" y="-38"/>
+            <point key="canvasLocation" x="2802.2900763358775" y="-38.028169014084511"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="ePR-Nn-kiH">
+        <scene sceneID="WqU-uw-0P0">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cRm-WP-EI7" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="J8m-Bo-4QF" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6xZ-yk-v8a">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="dnO-0o-g1s">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ry8-hn-sb0"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="qYo-YC-iiD"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Hdo-dV-IAg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0rE-hv-Um7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2.2900763358778624" y="-27.464788732394368"/>
+            <point key="canvasLocation" x="924.4274809160305" y="-27.464788732394368"/>
         </scene>
     </scenes>
     <resources>
