--- a/GoogleBookClient/CellView/SearchTableViewCell.xib
+++ b/GoogleBookClient/CellView/SearchTableViewCell.xib
@@ -19,7 +19,7 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lVs-3Z-6lz">
                         <rect key="frame" x="5" y="5" width="95" height="159"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="159" id="DqY-8p-jRc"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="159" id="DqY-8p-jRc"/>
                             <constraint firstAttribute="width" constant="95" id="MeO-nZ-ZL8"/>
                         </constraints>
                     </imageView>
@@ -56,7 +56,6 @@
                         <buttonConfiguration key="configuration" style="plain" image="star" catalog="system"/>
                         <connections>
                             <action selector="isFavoritedButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Umt-PK-lKA"/>
-                            <action selector="reviewBookButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="NVK-jX-8VG"/>
                         </connections>
                     </button>
                 </subviews>
@@ -77,7 +76,7 @@
                 <outlet property="bookCoverImage" destination="lVs-3Z-6lz" id="5Gu-m6-3Rr"/>
                 <outlet property="bookNameLabel" destination="cZ8-go-cCX" id="MVN-ck-OzK"/>
                 <outlet property="favoritButton" destination="EzR-OH-o1T" id="bYj-4e-eeo"/>
-                <outlet property="previewLink" destination="zPw-Te-oOB" id="o24-8A-bSu"/>
+                <outlet property="previewLink" destination="zPw-Te-oOB" id="8Hv-Dd-XzO"/>
             </connections>
             <point key="canvasLocation" x="129.7709923664122" y="32.74647887323944"/>
         </tableViewCell>
