--- a/GoogleBookClient/Base.lproj/Main.storyboard
+++ b/GoogleBookClient/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="59" width="393" height="32"/>
                                 <segments>
                                     <segment title="Search"/>
-                                    <segment title="Favorits"/>
+                                    <segment title="Favorites"/>
                                 </segments>
                                 <connections>
                                     <action selector="bookListSegmentedControl:" destination="BYZ-38-t0r" eventType="valueChanged" id="kc2-3f-d9T"/>
@@ -29,7 +29,7 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="5eF-yK-b7s">
                                 <rect key="frame" x="0.0" y="90" width="393" height="728"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <searchBar key="tableHeaderView" contentMode="redraw" id="w2n-dS-b8V">
+                                <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Enter text" id="w2n-dS-b8V">
                                     <rect key="frame" x="0.0" y="0.0" width="393" height="44"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <textInputTraits key="textInputTraits"/>
