--- a/GoogleBookClient/CellView/SearchTableViewCell.xib
+++ b/GoogleBookClient/CellView/SearchTableViewCell.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -25,31 +24,36 @@
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="fE7-tt-s6l">
-                        <rect key="frame" x="110" y="10" width="284" height="149"/>
+                        <rect key="frame" x="110" y="10" width="284" height="70.666666666666671"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Book name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cZ8-go-cCX">
-                                <rect key="frame" x="0.0" y="0.0" width="284" height="19.333333333333332"/>
+                                <rect key="frame" x="5" y="0.0" width="279" height="19.333333333333332"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ooU-kp-u2d">
-                                <rect key="frame" x="0.0" y="19.333333333333332" width="284" height="16.999999999999996"/>
+                                <rect key="frame" x="5" y="19.333333333333332" width="279" height="16.999999999999996"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="xhx-82-ZiO">
-                                <rect key="frame" x="0.0" y="36.333333333333336" width="284" height="112.66666666666666"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dto-Fe-7Ih">
+                                <rect key="frame" x="5" y="36.333333333333329" width="279" height="34.333333333333329"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="tap for preview.."/>
+                                <connections>
+                                    <action selector="pressPreviewLinkButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="7Ck-v2-eee"/>
+                                </connections>
+                            </button>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="cZ8-go-cCX" firstAttribute="leading" secondItem="fE7-tt-s6l" secondAttribute="leading" constant="5" id="W9X-kX-qG4"/>
+                            <constraint firstItem="cZ8-go-cCX" firstAttribute="leading" secondItem="fE7-tt-s6l" secondAttribute="leading" constant="5" id="mu5-nr-6Wl"/>
+                        </constraints>
                     </stackView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EzR-OH-o1T">
-                        <rect key="frame" x="399" y="54.666666666666657" width="60" height="60"/>
+                        <rect key="frame" x="399" y="15.333333333333336" width="60" height="60.000000000000007"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="60" id="H83-pD-RuN"/>
                             <constraint firstAttribute="width" constant="60" id="ohM-DD-UrT"/>
@@ -65,7 +69,6 @@
                     <constraint firstItem="lVs-3Z-6lz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="8rf-pa-9jP"/>
                     <constraint firstItem="EzR-OH-o1T" firstAttribute="leading" secondItem="fE7-tt-s6l" secondAttribute="trailing" constant="5" id="BO8-s0-uwC"/>
                     <constraint firstItem="fE7-tt-s6l" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="NDd-cF-zGE"/>
-                    <constraint firstAttribute="bottom" secondItem="fE7-tt-s6l" secondAttribute="bottom" constant="10" id="OpC-9h-1dc"/>
                     <constraint firstAttribute="bottom" secondItem="lVs-3Z-6lz" secondAttribute="bottom" constant="5" id="gbm-EK-lUG"/>
                     <constraint firstItem="fE7-tt-s6l" firstAttribute="leading" secondItem="lVs-3Z-6lz" secondAttribute="trailing" constant="10" id="heP-YS-6dT"/>
                     <constraint firstItem="EzR-OH-o1T" firstAttribute="centerY" secondItem="fE7-tt-s6l" secondAttribute="centerY" id="kh0-bf-kEs"/>
@@ -79,18 +82,12 @@
                 <outlet property="bookCoverImage" destination="lVs-3Z-6lz" id="5Gu-m6-3Rr"/>
                 <outlet property="bookNameLabel" destination="cZ8-go-cCX" id="MVN-ck-OzK"/>
                 <outlet property="favoritButton" destination="EzR-OH-o1T" id="bYj-4e-eeo"/>
-                <outlet property="previewLinkTextView" destination="xhx-82-ZiO" id="6rp-GT-Dip"/>
+                <outlet property="previewLinkButton" destination="dto-Fe-7Ih" id="XW5-Jf-occ"/>
             </connections>
             <point key="canvasLocation" x="129.7709923664122" y="32.74647887323944"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="star" catalog="system" width="128" height="116"/>
-        <systemColor name="labelColor">
-            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
