--- a/GoogleBookClient/CellView/SearchTableViewCell.xib
+++ b/GoogleBookClient/CellView/SearchTableViewCell.xib
@@ -24,7 +24,7 @@
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="fE7-tt-s6l">
-                        <rect key="frame" x="110" y="10" width="284" height="70.666666666666671"/>
+                        <rect key="frame" x="110" y="10" width="284" height="36.333333333333336"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Book name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cZ8-go-cCX">
                                 <rect key="frame" x="5" y="0.0" width="279" height="19.333333333333332"/>
@@ -38,14 +38,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dto-Fe-7Ih">
-                                <rect key="frame" x="5" y="36.333333333333329" width="279" height="34.333333333333329"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="tap for preview.."/>
-                                <connections>
-                                    <action selector="pressPreviewLinkButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="7Ck-v2-eee"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <constraints>
                             <constraint firstItem="cZ8-go-cCX" firstAttribute="leading" secondItem="fE7-tt-s6l" secondAttribute="leading" constant="5" id="W9X-kX-qG4"/>
@@ -53,7 +45,7 @@
                         </constraints>
                     </stackView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EzR-OH-o1T">
-                        <rect key="frame" x="399" y="15.333333333333336" width="60" height="60.000000000000007"/>
+                        <rect key="frame" x="399" y="-2" width="60" height="60.333333333333336"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="60" id="H83-pD-RuN"/>
                             <constraint firstAttribute="width" constant="60" id="ohM-DD-UrT"/>
@@ -64,16 +56,27 @@
                             <action selector="isFavoritedButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Umt-PK-lKA"/>
                         </connections>
                     </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dto-Fe-7Ih">
+                        <rect key="frame" x="102" y="46.333333333333343" width="146" height="36"/>
+                        <state key="normal" title="Button"/>
+                        <buttonConfiguration key="configuration" style="plain" title="tap for preview.."/>
+                        <connections>
+                            <action selector="pressPreviewLinkButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="7Ck-v2-eee"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottom" relation="lessThanOrEqual" secondItem="dto-Fe-7Ih" secondAttribute="bottom" priority="750" constant="86.670000000000002" id="2Z7-eJ-zfY"/>
                     <constraint firstItem="lVs-3Z-6lz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="8rf-pa-9jP"/>
                     <constraint firstItem="EzR-OH-o1T" firstAttribute="leading" secondItem="fE7-tt-s6l" secondAttribute="trailing" constant="5" id="BO8-s0-uwC"/>
                     <constraint firstItem="fE7-tt-s6l" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="NDd-cF-zGE"/>
                     <constraint firstAttribute="bottom" secondItem="lVs-3Z-6lz" secondAttribute="bottom" constant="5" id="gbm-EK-lUG"/>
                     <constraint firstItem="fE7-tt-s6l" firstAttribute="leading" secondItem="lVs-3Z-6lz" secondAttribute="trailing" constant="10" id="heP-YS-6dT"/>
+                    <constraint firstItem="dto-Fe-7Ih" firstAttribute="top" secondItem="fE7-tt-s6l" secondAttribute="bottom" id="j6p-Pb-s6y"/>
                     <constraint firstItem="EzR-OH-o1T" firstAttribute="centerY" secondItem="fE7-tt-s6l" secondAttribute="centerY" id="kh0-bf-kEs"/>
                     <constraint firstItem="lVs-3Z-6lz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="nL4-FP-XgM"/>
                     <constraint firstAttribute="trailing" secondItem="EzR-OH-o1T" secondAttribute="trailing" constant="5" id="qUA-ei-uIn"/>
+                    <constraint firstItem="dto-Fe-7Ih" firstAttribute="leading" secondItem="lVs-3Z-6lz" secondAttribute="trailing" constant="2" id="vkW-vw-4B8"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
