--- a/GoogleBookClient/CellView/SearchTableViewCell.xib
+++ b/GoogleBookClient/CellView/SearchTableViewCell.xib
@@ -10,14 +10,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchTableViewCell" rowHeight="169" id="KGk-i7-Jjw" customClass="SearchTableViewCell" customModule="GoogleBookClient" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="464" height="169"/>
+            <rect key="frame" x="0.0" y="0.0" width="464" height="170"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="464" height="169"/>
+                <rect key="frame" x="0.0" y="0.0" width="464" height="170"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lVs-3Z-6lz">
-                        <rect key="frame" x="5" y="5" width="95" height="159"/>
+                        <rect key="frame" x="5" y="5" width="95" height="160"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="159" id="DqY-8p-jRc"/>
                             <constraint firstAttribute="width" constant="95" id="MeO-nZ-ZL8"/>
@@ -27,22 +27,18 @@
                         <rect key="frame" x="110" y="10" width="284" height="36.333333333333336"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Book name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cZ8-go-cCX">
-                                <rect key="frame" x="5" y="0.0" width="279" height="19.333333333333332"/>
+                                <rect key="frame" x="0.0" y="0.0" width="284" height="19.333333333333332"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ooU-kp-u2d">
-                                <rect key="frame" x="5" y="19.333333333333332" width="279" height="16.999999999999996"/>
+                                <rect key="frame" x="0.0" y="19.333333333333332" width="284" height="16.999999999999996"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <constraints>
-                            <constraint firstItem="cZ8-go-cCX" firstAttribute="leading" secondItem="fE7-tt-s6l" secondAttribute="leading" constant="5" id="W9X-kX-qG4"/>
-                            <constraint firstItem="cZ8-go-cCX" firstAttribute="leading" secondItem="fE7-tt-s6l" secondAttribute="leading" constant="5" id="mu5-nr-6Wl"/>
-                        </constraints>
                     </stackView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EzR-OH-o1T">
                         <rect key="frame" x="399" y="-2" width="60" height="60.333333333333336"/>
@@ -57,7 +53,7 @@
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dto-Fe-7Ih">
-                        <rect key="frame" x="102" y="46.333333333333343" width="146" height="36"/>
+                        <rect key="frame" x="102" y="46.333333333333329" width="146" height="34.333333333333329"/>
                         <state key="normal" title="Button"/>
                         <buttonConfiguration key="configuration" style="plain" title="tap for preview.."/>
                         <connections>
@@ -66,8 +62,8 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" relation="lessThanOrEqual" secondItem="dto-Fe-7Ih" secondAttribute="bottom" priority="750" constant="86.670000000000002" id="2Z7-eJ-zfY"/>
                     <constraint firstItem="lVs-3Z-6lz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="8rf-pa-9jP"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="dto-Fe-7Ih" secondAttribute="bottom" constant="10" id="958-OO-D1F"/>
                     <constraint firstItem="EzR-OH-o1T" firstAttribute="leading" secondItem="fE7-tt-s6l" secondAttribute="trailing" constant="5" id="BO8-s0-uwC"/>
                     <constraint firstItem="fE7-tt-s6l" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="NDd-cF-zGE"/>
                     <constraint firstAttribute="bottom" secondItem="lVs-3Z-6lz" secondAttribute="bottom" constant="5" id="gbm-EK-lUG"/>
@@ -87,7 +83,7 @@
                 <outlet property="favoritButton" destination="EzR-OH-o1T" id="bYj-4e-eeo"/>
                 <outlet property="previewLinkButton" destination="dto-Fe-7Ih" id="XW5-Jf-occ"/>
             </connections>
-            <point key="canvasLocation" x="129.7709923664122" y="32.74647887323944"/>
+            <point key="canvasLocation" x="62.595419847328245" y="30.985915492957748"/>
         </tableViewCell>
     </objects>
     <resources>
